<resources>
    <string name="app_name">SplitWise</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact us</string>
    <string name="splitwise">Splitwise</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="terms">Terms</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="account">Account</string>
    <string name="add_friend_button">Add friend button</string>
    <string name="add">Add</string>

    <string name="create_group">Create Group</string>
    <string name="new_user_signup">New User ? SignUp</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="sample_email">johndoe@gmail.com</string>
    <string name="sample_name">John Doe</string>
    <string name="profile">Profile</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="next_arrow">next arrow</string>
    <string name="send">Send Request</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address">Email Address</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="add_group">Add Group</string>
    <string name="group_name">Group Name</string>
    <string name="amount_to_be_paid">Total Amount: 0</string>
    <string name="add_new_member">Add new member</string>
    <string name="add_member">Add Member</string>
    <string name="add_bill">Add Bill</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="member_name">Member Name</string>
    <string name="add_friend">Add Friend</string>
    <string name="update_group_name">Update Group Name</string>
    <string name="delete_group">Delete Group</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="payer_name">Payer Name</string>
    <string name="settle">Settle</string>
</resources>