<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <!-- App Logo -->
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        android:layout_gravity="center" />

    <!-- App Name -->
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splitwise"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />

    <!-- Sign Up Button -->
    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/bg_button_signup"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"  />

    <!-- Log In Button -->
    <TextView
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:background="@drawable/bg_button_transparent"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"
        android:padding="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp" />

    <!-- Sign in with Google Button -->
    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5" />
        <!-- Bottom Links: Terms, Privacy Policy, Contact us -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/contactUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
