<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_button_transparent">

    <EditText
        android:id="@+id/payer_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/payer_name"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/bg_custom_input"
        android:textColor="@color/black"
        android:textColorHint="#4E4E4E"/>

    <EditText
        android:id="@+id/receiver_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/receiver_name"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/bg_custom_input"
        android:textColor="@color/black"
        android:textColorHint="#4E4E4E"/>

    <EditText
        android:id="@+id/amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:background="@drawable/bg_custom_input"
        android:textColor="@color/black"
        android:textColorHint="#4E4E4E" />

    <TextView
        android:id="@+id/settle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_signup"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/settle"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="50dp"/>
</LinearLayout>