<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_marginVertical="3dp"
    android:layout_marginHorizontal="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/friendTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="4dp"
            app:drawableEndCompat="@drawable/ic_next_arrow" />
        <TextView
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="#001926"
            android:padding="4dp"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="16sp"
            android:textColor="#001926"
            android:padding="4dp"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</androidx.cardview.widget.CardView>