<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="2dp"
    app:cardElevation="10dp">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        android:paddingVertical="5dp"
        android:background="@drawable/dialog_background">
        <TextView
            android:id="@+id/update_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_group_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingHorizontal="12dp"
            android:paddingVertical="5dp"
            android:gravity="start"
            android:background="@android:color/transparent" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_margin="5dp"/>
        <EditText
            android:id="@+id/groupNameEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:padding="10dp"
            android:background="@drawable/bg_custom_input"
            android:autofillHints=""
            android:hint="@string/enter_group_name"
            android:textColorHint="#4E4E4E"
            android:inputType="text"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">
            <TextView
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textAlignment="center"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_button_signup"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/updateButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/update"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textAlignment="center"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_button_signup"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
